Refactored some of Semantics

--- a/TypeCheckerGenerator/latex/Semantics.tex
+++ b/TypeCheckerGenerator/latex/Semantics.tex
@@ -41,6 +41,12 @@
 \\
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaKeyword{import}\AgdaSpace{}%
+\AgdaModule{Data.String}\AgdaSpace{}%
+\AgdaKeyword{using}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}++\AgdaUnderscore{}}}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaKeyword{import}\AgdaSpace{}%
 \AgdaModule{Expression}\AgdaSpace{}%
 \AgdaKeyword{using}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{Expr}\AgdaSymbol{;}\AgdaSpace{}%
@@ -51,7 +57,8 @@
 \AgdaModule{Data.Product}\AgdaSpace{}%
 \AgdaKeyword{using}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}×\AgdaUnderscore{}}}\AgdaSymbol{;}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{\AgdaUnderscore{},\AgdaUnderscore{}}}\AgdaSymbol{)}\<%
+\AgdaOperator{\AgdaInductiveConstructor{\AgdaUnderscore{},\AgdaUnderscore{}}}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaFunction{Σ-syntax}\AgdaSymbol{)}\<%
 \\
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaKeyword{import}\AgdaSpace{}%
@@ -72,8 +79,10 @@
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaKeyword{import}\AgdaSpace{}%
 \AgdaModule{Failable}\AgdaSpace{}%
-\AgdaKeyword{hiding}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}>>=\AgdaUnderscore{}}}\AgdaSymbol{)}\<%
+\AgdaKeyword{using}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaDatatype{Failable}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaInductiveConstructor{succeed}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaInductiveConstructor{fail}\AgdaSymbol{)}\<%
 \end{code}
 }
 
@@ -161,49 +170,58 @@ a β-rule.
 %
 \\[\AgdaEmptyExtraSkip]%
 %
-\>[2]\AgdaFunction{β-match}%
-\>[11]\AgdaSymbol{:}%
-\>[14]\AgdaSymbol{(}\AgdaBound{targ}%
-\>[21]\AgdaSymbol{:}%
-\>[24]\AgdaFunction{Term}\AgdaSpace{}%
-\AgdaInductiveConstructor{const}\AgdaSpace{}%
-\AgdaGeneralizable{γ}\AgdaSymbol{)}%
-\>[39]\AgdaSymbol{→}\<%
+\>[2]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaModule{Data.Maybe}\AgdaSpace{}%
+\AgdaKeyword{using}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}>>=\AgdaUnderscore{}}}\AgdaSymbol{)}\<%
 \\
 %
-\>[14]\AgdaSymbol{(}\AgdaBound{type}%
-\>[21]\AgdaSymbol{:}%
-\>[24]\AgdaFunction{Term}\AgdaSpace{}%
-\AgdaInductiveConstructor{const}\AgdaSpace{}%
-\AgdaGeneralizable{γ}\AgdaSymbol{)}%
-\>[39]\AgdaSymbol{→}\<%
+\\[\AgdaEmptyExtraSkip]%
+%
+\>[2]\AgdaFunction{Rule-Env}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{γ}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Scope}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\<%
 \\
 %
-\>[14]\AgdaSymbol{(}\AgdaBound{elim}%
-\>[21]\AgdaSymbol{:}%
-\>[24]\AgdaFunction{Term}\AgdaSpace{}%
-\AgdaInductiveConstructor{const}\AgdaSpace{}%
-\AgdaGeneralizable{γ}\AgdaSymbol{)}%
-\>[39]\AgdaSymbol{→}\<%
-\\
-%
-\>[14]\AgdaDatatype{Maybe}%
-\>[80I]\AgdaSymbol{(((}\AgdaGeneralizable{γ}\AgdaSpace{}%
+\>[2]\AgdaFunction{Rule-Env}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{γ}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{=}%
+\>[92I]\AgdaSymbol{((}\AgdaBound{γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⊗}}\AgdaSpace{}%
 \AgdaField{target}\AgdaSymbol{)}%
-\>[40]\AgdaOperator{\AgdaInductiveConstructor{∙}}\<%
+\>[36]\AgdaOperator{\AgdaInductiveConstructor{∙}}\<%
 \\
-\>[80I][@{}l@{\AgdaIndent{0}}]%
-\>[22]\AgdaSymbol{(}\AgdaGeneralizable{γ}\AgdaSpace{}%
+\>[92I][@{}l@{\AgdaIndent{0}}]%
+\>[18]\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⊗}}\AgdaSpace{}%
 \AgdaField{targetType}\AgdaSymbol{)}%
-\>[40]\AgdaOperator{\AgdaInductiveConstructor{∙}}\<%
+\>[36]\AgdaOperator{\AgdaInductiveConstructor{∙}}\<%
 \\
 %
-\>[22]\AgdaSymbol{(}\AgdaGeneralizable{γ}\AgdaSpace{}%
+\>[18]\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⊗}}\AgdaSpace{}%
 \AgdaField{eliminator}\AgdaSymbol{))}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{-Env}}\AgdaSymbol{)}\<%
+\AgdaOperator{\AgdaDatatype{-Env}}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+%
+\>[2]\AgdaFunction{β-match}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{targ}\AgdaSpace{}%
+\AgdaBound{type}\AgdaSpace{}%
+\AgdaBound{elim}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Term}\AgdaSpace{}%
+\AgdaInductiveConstructor{const}\AgdaSpace{}%
+\AgdaGeneralizable{γ}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaDatatype{Maybe}\AgdaSpace{}%
+\AgdaFunction{Rule-Env}\<%
 \\
 %
 \>[2]\AgdaFunction{β-match}\AgdaSpace{}%
@@ -211,9 +229,9 @@ a β-rule.
 \AgdaBound{ty}\AgdaSpace{}%
 \AgdaBound{el}\AgdaSpace{}%
 \AgdaSymbol{=}%
-\>[92I]\AgdaKeyword{do}\<%
+\>[115I]\AgdaKeyword{do}\<%
 \\
-\>[92I][@{}l@{\AgdaIndent{0}}]%
+\>[115I][@{}l@{\AgdaIndent{0}}]%
 \>[24]\AgdaBound{t-env}%
 \>[31]\AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
 \AgdaFunction{match}\AgdaSpace{}%
@@ -242,13 +260,6 @@ a β-rule.
 \AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSpace{}%
 \AgdaBound{e-env}\AgdaSymbol{)}\<%
 \\
-\>[92I][@{}l@{\AgdaIndent{0}}]%
-\>[23]\AgdaKeyword{where}\<%
-\\
-\>[23][@{}l@{\AgdaIndent{0}}]%
-\>[25]\AgdaKeyword{open}\AgdaSpace{}%
-\AgdaModule{Data.Maybe}\<%
-\\
 \>[0]\<%
 \\
 %
@@ -256,104 +267,148 @@ a β-rule.
 %
 \>[2]\AgdaFunction{β-reduce}%
 \>[12]\AgdaSymbol{:}%
-\>[15]\AgdaSymbol{((}\AgdaGeneralizable{γ}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⊗}}\AgdaSpace{}%
-\AgdaField{target}\AgdaSymbol{)}%
-\>[34]\AgdaOperator{\AgdaInductiveConstructor{∙}}\<%
-\\
-\>[15][@{}l@{\AgdaIndent{0}}]%
-\>[16]\AgdaSymbol{(}\AgdaGeneralizable{γ}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⊗}}\AgdaSpace{}%
-\AgdaField{targetType}\AgdaSymbol{)}%
-\>[34]\AgdaOperator{\AgdaInductiveConstructor{∙}}\<%
-\\
-%
-\>[16]\AgdaSymbol{(}\AgdaGeneralizable{γ}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⊗}}\AgdaSpace{}%
-\AgdaField{eliminator}\AgdaSymbol{))}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{-Env}}%
-\>[40]\AgdaSymbol{→}\<%
-\\
-%
-\>[15]\AgdaFunction{Term}\AgdaSpace{}%
+\>[15]\AgdaFunction{Rule-Env}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaGeneralizable{γ}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaFunction{Term}\AgdaSpace{}%
 \AgdaInductiveConstructor{compu}\AgdaSpace{}%
 \AgdaGeneralizable{γ}\<%
 \\
 %
 \>[2]\AgdaFunction{β-reduce}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{tenv}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSpace{}%
-\AgdaBound{tyEnv}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSpace{}%
-\AgdaBound{eenv}\AgdaSymbol{)}\<%
+\AgdaBound{env}\<%
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]%
-\>[4]\AgdaSymbol{=}%
-\>[123I]\AgdaKeyword{let}\AgdaSpace{}%
-\AgdaBound{t}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
+\>[4]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaFunction{toTerm}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{tenv}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSpace{}%
-\AgdaBound{tyEnv}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSpace{}%
-\AgdaBound{eenv}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{env}\AgdaSpace{}%
 \AgdaField{redTerm}\AgdaSpace{}%
-\AgdaKeyword{in}\<%
-\\
-\>[.][@{}l@{}]\<[123I]%
-\>[6]\AgdaKeyword{let}\AgdaSpace{}%
-\AgdaBound{T}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaFunction{toTerm}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{tenv}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSpace{}%
-\AgdaBound{tyEnv}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSpace{}%
-\AgdaBound{eenv}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaField{redType}\AgdaSpace{}%
-\AgdaKeyword{in}\<%
-\\
-\>[6][@{}l@{\AgdaIndent{0}}]%
-\>[8]\AgdaBound{t}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
-\AgdaBound{T}\<%
+\AgdaFunction{toTerm}\AgdaSpace{}%
+\AgdaBound{env}\AgdaSpace{}%
+\AgdaField{redType}\<%
 \\
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaModule{β-rule}\<%
 \end{code}
 We then define a function that will attempt a reduction with regards
 to a list of β-rules by trying to match and apply a rule.
+\hide{
 \begin{code}%
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaKeyword{import}\AgdaSpace{}%
+\AgdaModule{Failable}\AgdaSpace{}%
+\AgdaKeyword{using}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}>>=\AgdaUnderscore{}}}\AgdaSymbol{)}\<%
+\end{code}
+}
+\begin{code}%
+\>[0]\AgdaFunction{findRule}\AgdaSpace{}%
+\AgdaSymbol{:}%
+\>[150I]\AgdaDatatype{List}\AgdaSpace{}%
+\AgdaRecord{β-rule}\AgdaSpace{}%
+\AgdaSymbol{→}\<%
+\\
+\>[.][@{}l@{}]\<[150I]%
+\>[11]\AgdaSymbol{(}\AgdaBound{tar}\AgdaSpace{}%
+\AgdaBound{type}\AgdaSpace{}%
+\AgdaBound{elim}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Term}\AgdaSpace{}%
+\AgdaInductiveConstructor{const}\AgdaSpace{}%
+\AgdaGeneralizable{γ}\AgdaSymbol{)}%
+\>[43]\AgdaSymbol{→}\<%
+\\
+%
+\>[11]\AgdaDatatype{Failable}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaSpace{}%
+\AgdaFunction{Σ[}\AgdaSpace{}%
+\AgdaBound{r}\AgdaSpace{}%
+\AgdaFunction{∈}\AgdaSpace{}%
+\AgdaRecord{β-rule}\AgdaSpace{}%
+\AgdaFunction{]}\AgdaSpace{}%
+\AgdaFunction{Rule-Env}\AgdaSpace{}%
+\AgdaBound{r}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaGeneralizable{γ}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaFunction{findRule}\AgdaSpace{}%
+\AgdaInductiveConstructor{[]}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSpace{}%
+\AgdaBound{ty}\AgdaSpace{}%
+\AgdaBound{e}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{fail}%
+\>[175I]\AgdaSymbol{(}\AgdaString{"No matching β-rule found for "}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{++}}\<%
+\\
+\>[175I][@{}l@{\AgdaIndent{0}}]%
+\>[27]\AgdaFunction{print}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{++}}\AgdaSpace{}%
+\AgdaString{" : "}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{++}}\AgdaSpace{}%
+\AgdaFunction{print}\AgdaSpace{}%
+\AgdaBound{ty}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{++}}\<%
+\\
+%
+\>[27]\AgdaString{"eliminated by "}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{++}}\AgdaSpace{}%
+\AgdaFunction{print}\AgdaSpace{}%
+\AgdaBound{e}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaFunction{findRule}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{r}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
+\AgdaBound{rs}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSpace{}%
+\AgdaBound{ty}\AgdaSpace{}%
+\AgdaBound{e}\AgdaSpace{}%
+\AgdaKeyword{with}\AgdaSpace{}%
+\AgdaFunction{β-match}\AgdaSpace{}%
+\AgdaBound{r}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSpace{}%
+\AgdaBound{ty}\AgdaSpace{}%
+\AgdaBound{e}\<%
+\\
+\>[0]\AgdaSymbol{...}\AgdaSpace{}%
+\AgdaSymbol{|}\AgdaSpace{}%
+\AgdaInductiveConstructor{nothing}%
+\>[16]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaFunction{findRule}\AgdaSpace{}%
+\AgdaBound{rs}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSpace{}%
+\AgdaBound{ty}\AgdaSpace{}%
+\AgdaBound{e}\<%
+\\
+\>[0]\AgdaSymbol{...}\AgdaSpace{}%
+\AgdaSymbol{|}\AgdaSpace{}%
+\AgdaInductiveConstructor{just}\AgdaSpace{}%
+\AgdaBound{env}%
+\>[16]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{succeed}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{r}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
+\AgdaBound{env}\AgdaSymbol{)}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaFunction{reduce}\AgdaSpace{}%
 \AgdaSymbol{:}%
-\>[148I]\AgdaDatatype{List}\AgdaSpace{}%
+\>[214I]\AgdaDatatype{List}\AgdaSpace{}%
 \AgdaRecord{β-rule}%
 \>[34]\AgdaSymbol{→}\<%
 \\
-\>[.][@{}l@{}]\<[148I]%
-\>[9]\AgdaSymbol{(}\AgdaBound{tar}%
-\>[17]\AgdaSymbol{:}\AgdaSpace{}%
+\>[.][@{}l@{}]\<[214I]%
+\>[9]\AgdaSymbol{(}\AgdaBound{tar}\AgdaSpace{}%
+\AgdaBound{type}\AgdaSpace{}%
+\AgdaBound{elim}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaFunction{Term}\AgdaSpace{}%
 \AgdaInductiveConstructor{const}\AgdaSpace{}%
 \AgdaGeneralizable{γ}\AgdaSymbol{)}%
-\>[34]\AgdaSymbol{→}\<%
-\\
-%
-\>[9]\AgdaSymbol{(}\AgdaBound{tType}%
-\>[17]\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaFunction{Term}\AgdaSpace{}%
-\AgdaInductiveConstructor{const}\AgdaSpace{}%
-\AgdaGeneralizable{γ}\AgdaSymbol{)}%
-\>[34]\AgdaSymbol{→}\<%
-\\
-%
-\>[9]\AgdaSymbol{(}\AgdaBound{elim}%
-\>[17]\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaFunction{Term}\AgdaSpace{}%
-\AgdaInductiveConstructor{const}\AgdaSpace{}%
-\AgdaGeneralizable{γ}\AgdaSymbol{)}%
-\>[34]\AgdaSymbol{→}\<%
+\>[41]\AgdaSymbol{→}\<%
 \\
 %
 \>[9]\AgdaDatatype{Failable}\AgdaSpace{}%
@@ -362,46 +417,28 @@ to a list of β-rules by trying to match and apply a rule.
 \AgdaGeneralizable{γ}\AgdaSymbol{)}\<%
 \\
 \>[0]\AgdaFunction{reduce}\AgdaSpace{}%
-\AgdaInductiveConstructor{[]}\AgdaSpace{}%
-\AgdaBound{ta}\AgdaSpace{}%
-\AgdaBound{ty}\AgdaSpace{}%
-\AgdaBound{el}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{fail}\AgdaSpace{}%
-\AgdaString{"Failed to reduce"}\<%
-\\
-\>[0]\AgdaFunction{reduce}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{rule}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
-\AgdaBound{rules}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaBound{ta}\AgdaSpace{}%
-\AgdaBound{ty}\AgdaSpace{}%
-\AgdaBound{el}\<%
-\\
-\>[0][@{}l@{\AgdaIndent{0}}]%
-\>[2]\AgdaKeyword{with}\AgdaSpace{}%
-\AgdaFunction{β-match}\AgdaSpace{}%
-\AgdaBound{rule}\AgdaSpace{}%
-\AgdaBound{ta}\AgdaSpace{}%
-\AgdaBound{ty}\AgdaSpace{}%
-\AgdaBound{el}\<%
-\\
-\>[0]\AgdaSymbol{...}\AgdaSpace{}%
-\AgdaSymbol{|}\AgdaSpace{}%
-\AgdaInductiveConstructor{nothing}%
-\>[15]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaFunction{reduce}\AgdaSpace{}%
 \AgdaBound{rules}\AgdaSpace{}%
 \AgdaBound{ta}\AgdaSpace{}%
 \AgdaBound{ty}\AgdaSpace{}%
 \AgdaBound{el}\<%
 \\
-\>[0]\AgdaSymbol{...}\AgdaSpace{}%
-\AgdaSymbol{|}\AgdaSpace{}%
-\AgdaInductiveConstructor{just}\AgdaSpace{}%
-\AgdaBound{env}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{succeed}\AgdaSpace{}%
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaSymbol{=}%
+\>[229I]\AgdaKeyword{do}\<%
+\\
+\>[229I][@{}l@{\AgdaIndent{0}}]%
+\>[6]\AgdaSymbol{(}\AgdaBound{rule}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
+\AgdaBound{env}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
+\AgdaFunction{findRule}\AgdaSpace{}%
+\AgdaBound{rules}\AgdaSpace{}%
+\AgdaBound{ta}\AgdaSpace{}%
+\AgdaBound{ty}\AgdaSpace{}%
+\AgdaBound{el}\<%
+\\
+%
+\>[6]\AgdaInductiveConstructor{succeed}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{β-reduce}\AgdaSpace{}%
 \AgdaBound{rule}\AgdaSpace{}%
 \AgdaBound{env}\AgdaSymbol{)}\<%
@@ -446,11 +483,11 @@ computation in which they have no right.
 \begin{code}%
 \>[0]\AgdaFunction{normalize}\AgdaSpace{}%
 \AgdaSymbol{:}%
-\>[198I]\AgdaDatatype{List}\AgdaSpace{}%
+\>[244I]\AgdaDatatype{List}\AgdaSpace{}%
 \AgdaRecord{β-rule}\AgdaSpace{}%
 \AgdaSymbol{→}\<%
 \\
-\>[.][@{}l@{}]\<[198I]%
+\>[.][@{}l@{}]\<[244I]%
 \>[12]\AgdaSymbol{(∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{δ}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
@@ -475,8 +512,8 @@ computation in which they have no right.
 %
 \>[12]\AgdaFunction{Term}\AgdaSpace{}%
 \AgdaGeneralizable{d}\AgdaSpace{}%
-\AgdaGeneralizable{γ}\AgdaSpace{}%
-\AgdaSymbol{→}\<%
+\AgdaGeneralizable{γ}%
+\>[22]\AgdaSymbol{→}\<%
 \\
 %
 \>[12]\AgdaFunction{Term}\AgdaSpace{}%
@@ -492,6 +529,8 @@ computation in which they have no right.
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaKeyword{where}\<%
 \\
+%
+\\[\AgdaEmptyExtraSkip]%
 \>[2][@{}l@{\AgdaIndent{0}}]%
 \>[4]\AgdaFunction{norm}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -545,28 +584,42 @@ computation in which they have no right.
 %
 \>[4]\AgdaSymbol{...}\AgdaSpace{}%
 \AgdaSymbol{|}\AgdaSpace{}%
-\AgdaBound{t'}\AgdaSpace{}%
-\AgdaSymbol{|}\AgdaSpace{}%
+\AgdaInductiveConstructor{thunk}\AgdaSpace{}%
+\AgdaBound{x}%
+\>[19]\AgdaSymbol{|}\AgdaSpace{}%
 \AgdaBound{e'}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{thunk}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{elim}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSpace{}%
+\AgdaBound{e'}\AgdaSymbol{)}\<%
+\\
+%
+\>[4]\AgdaCatchallClause{\AgdaSymbol{...}}\AgdaSpace{}%
+\AgdaCatchallClause{\AgdaSymbol{|}}\AgdaSpace{}%
+\AgdaCatchallClause{\AgdaBound{t'}}%
+\>[19]\AgdaCatchallClause{\AgdaSymbol{|}}\AgdaSpace{}%
+\AgdaCatchallClause{\AgdaBound{e'}}\AgdaSpace{}%
 \AgdaKeyword{with}\AgdaSpace{}%
 \AgdaBound{infer}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSpace{}%
 \AgdaBound{t}\<%
 \\
 %
-\>[4]\AgdaSymbol{...}\AgdaSpace{}%
-\AgdaSymbol{|}\AgdaSpace{}%
+\>[4]\AgdaSymbol{...}%
+\>[12]\AgdaSymbol{|}\AgdaSpace{}%
 \AgdaInductiveConstructor{fail}\AgdaSpace{}%
-\AgdaBound{m}%
+\AgdaBound{x}%
 \>[25]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{thunk}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{elim}\AgdaSpace{}%
 \AgdaBound{t}\AgdaSpace{}%
-\AgdaBound{e'}\AgdaSymbol{)}\<%
+\AgdaBound{e'}\AgdaSymbol{)}%
+\>[46]\AgdaComment{-- should never happen}\<%
 \\
 %
-\>[4]\AgdaSymbol{...}\AgdaSpace{}%
-\AgdaSymbol{|}\AgdaSpace{}%
+\>[4]\AgdaSymbol{...}%
+\>[12]\AgdaSymbol{|}\AgdaSpace{}%
 \AgdaInductiveConstructor{succeed}\AgdaSpace{}%
 \AgdaBound{ty}\AgdaSpace{}%
 \AgdaKeyword{with}\AgdaSpace{}%
@@ -577,39 +630,11 @@ computation in which they have no right.
 \AgdaBound{e'}\<%
 \\
 %
-\>[4]\AgdaSymbol{...}\AgdaSpace{}%
-\AgdaSymbol{|}\AgdaSpace{}%
-\AgdaInductiveConstructor{succeed}\AgdaSpace{}%
-\AgdaBound{x}%
-\>[25]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaFunction{norm}\AgdaSpace{}%
-\AgdaBound{Γ}\AgdaSpace{}%
-\AgdaBound{x}\<%
-\\
-%
-\>[4]\AgdaSymbol{...}\AgdaSpace{}%
-\AgdaSymbol{|}\AgdaSpace{}%
+\>[4]\AgdaSymbol{...}%
+\>[16]\AgdaSymbol{|}\AgdaSpace{}%
 \AgdaInductiveConstructor{fail}\AgdaSpace{}%
-\AgdaBound{m}\AgdaSpace{}%
-\AgdaKeyword{with}\AgdaSpace{}%
-\AgdaBound{t'}\<%
-\\
-%
-\>[4]\AgdaSymbol{...}\AgdaSpace{}%
-\AgdaSymbol{|}\AgdaSpace{}%
-\AgdaInductiveConstructor{thunk}\AgdaSpace{}%
 \AgdaBound{x}%
-\>[25]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{thunk}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{elim}\AgdaSpace{}%
-\AgdaBound{x}\AgdaSpace{}%
-\AgdaBound{e'}\AgdaSymbol{)}\<%
-\\
-%
-\>[4]\AgdaCatchallClause{\AgdaSymbol{...}}\AgdaSpace{}%
-\AgdaCatchallClause{\AgdaSymbol{|}}\AgdaSpace{}%
-\AgdaCatchallClause{\AgdaSymbol{\AgdaUnderscore{}}}%
-\>[25]\AgdaSymbol{=}\AgdaSpace{}%
+\>[28]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{thunk}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{elim}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{t'}\AgdaSpace{}%
@@ -618,7 +643,14 @@ computation in which they have no right.
 \AgdaBound{e'}\AgdaSymbol{)}\<%
 \\
 %
-\>[4]\AgdaComment{--- ...}\<%
+\>[4]\AgdaSymbol{...}%
+\>[16]\AgdaSymbol{|}\AgdaSpace{}%
+\AgdaInductiveConstructor{succeed}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaFunction{norm}\AgdaSpace{}%
+\AgdaBound{Γ}\AgdaSpace{}%
+\AgdaBound{x}\<%
 \end{code}
 \hide{
 \begin{code}%
