Refactor semantics w.r.t. expressions and patterns etc

--- a/TypeCheckerGenerator/latex/Expression.tex
+++ b/TypeCheckerGenerator/latex/Expression.tex
@@ -142,7 +142,7 @@ necessary information to build a term.
 %
 \\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaKeyword{data}\AgdaSpace{}%
-\AgdaDatatype{con}\AgdaSpace{}%
+\AgdaDatatype{Con}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{p}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaDatatype{Pattern}\AgdaSpace{}%
@@ -154,7 +154,7 @@ necessary information to build a term.
 \AgdaPrimitiveType{Set}\<%
 \\
 \>[0]\AgdaKeyword{data}\AgdaSpace{}%
-\AgdaDatatype{com}\AgdaSpace{}%
+\AgdaDatatype{Com}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{p}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaDatatype{Pattern}\AgdaSpace{}%
@@ -168,7 +168,7 @@ necessary information to build a term.
 %
 \\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaKeyword{data}\AgdaSpace{}%
-\AgdaDatatype{con}\AgdaSpace{}%
+\AgdaDatatype{Con}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSpace{}%
 \AgdaBound{γ}\AgdaSpace{}%
 \AgdaKeyword{where}\<%
@@ -178,45 +178,45 @@ necessary information to build a term.
 \>[9]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPostulate{String}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{con}\AgdaSpace{}%
+\AgdaDatatype{Con}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSpace{}%
 \AgdaBound{γ}\<%
 \\
 %
 \>[2]\AgdaOperator{\AgdaInductiveConstructor{\AgdaUnderscore{}∙\AgdaUnderscore{}}}%
 \>[9]\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{con}\AgdaSpace{}%
+\AgdaDatatype{Con}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSpace{}%
 \AgdaBound{γ}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{con}\AgdaSpace{}%
+\AgdaDatatype{Con}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSpace{}%
 \AgdaBound{γ}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{con}\AgdaSpace{}%
+\AgdaDatatype{Con}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSpace{}%
 \AgdaBound{γ}\<%
 \\
 %
 \>[2]\AgdaInductiveConstructor{bind}%
 \>[9]\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{con}\AgdaSpace{}%
+\AgdaDatatype{Con}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{suc}\AgdaSpace{}%
 \AgdaBound{γ}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{con}\AgdaSpace{}%
+\AgdaDatatype{Con}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSpace{}%
 \AgdaBound{γ}\<%
 \\
 %
 \>[2]\AgdaInductiveConstructor{thunk}%
 \>[9]\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{com}\AgdaSpace{}%
+\AgdaDatatype{Com}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSpace{}%
 \AgdaBound{γ}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{con}\AgdaSpace{}%
+\AgdaDatatype{Con}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSpace{}%
 \AgdaBound{γ}\<%
 \\
@@ -235,14 +235,14 @@ necessary information to build a term.
 \AgdaOperator{\AgdaFunction{]}}\AgdaSpace{}%
 \AgdaBound{γ}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{con}\AgdaSpace{}%
+\AgdaDatatype{Con}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSpace{}%
 \AgdaBound{γ}\<%
 \\
 \>[0]\<%
 \\
 \>[0]\AgdaKeyword{data}\AgdaSpace{}%
-\AgdaDatatype{com}\AgdaSpace{}%
+\AgdaDatatype{Com}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSpace{}%
 \AgdaBound{γ}\AgdaSpace{}%
 \AgdaKeyword{where}\<%
@@ -253,37 +253,37 @@ necessary information to build a term.
 \AgdaDatatype{Var}\AgdaSpace{}%
 \AgdaBound{γ}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{com}\AgdaSpace{}%
+\AgdaDatatype{Com}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSpace{}%
 \AgdaBound{γ}\<%
 \\
 %
 \>[2]\AgdaInductiveConstructor{elim}%
 \>[9]\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{com}\AgdaSpace{}%
+\AgdaDatatype{Com}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSpace{}%
 \AgdaBound{γ}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{con}\AgdaSpace{}%
+\AgdaDatatype{Con}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSpace{}%
 \AgdaBound{γ}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{com}\AgdaSpace{}%
+\AgdaDatatype{Com}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSpace{}%
 \AgdaBound{γ}\<%
 \\
 %
 \>[2]\AgdaOperator{\AgdaInductiveConstructor{\AgdaUnderscore{}∷\AgdaUnderscore{}}}%
 \>[9]\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{con}\AgdaSpace{}%
+\AgdaDatatype{Con}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSpace{}%
 \AgdaBound{γ}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{con}\AgdaSpace{}%
+\AgdaDatatype{Con}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSpace{}%
 \AgdaBound{γ}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{com}\AgdaSpace{}%
+\AgdaDatatype{Com}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSpace{}%
 \AgdaBound{γ}\<%
 \\
@@ -296,7 +296,7 @@ necessary information to build a term.
 \AgdaInductiveConstructor{const}\AgdaSpace{}%
 \AgdaBound{γ}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
-\AgdaDatatype{con}\AgdaSpace{}%
+\AgdaDatatype{Con}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSpace{}%
 \AgdaBound{γ}\<%
 \\
@@ -305,7 +305,7 @@ necessary information to build a term.
 \AgdaInductiveConstructor{compu}\AgdaSpace{}%
 \AgdaBound{γ}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
-\AgdaDatatype{com}\AgdaSpace{}%
+\AgdaDatatype{Com}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSpace{}%
 \AgdaBound{γ}\<%
 \end{code}
@@ -452,7 +452,7 @@ weaken and open expressions and substitutions thereof for later use.
 \AgdaSymbol{(λ}\AgdaSpace{}%
 \AgdaBound{γ}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{com}\AgdaSpace{}%
+\AgdaDatatype{Com}\AgdaSpace{}%
 \AgdaGeneralizable{p}\AgdaSpace{}%
 \AgdaBound{γ}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{]\AgdaUnderscore{}}}\AgdaSymbol{)}\<%
