--- a/TypeCheckerGenerator/latex/Semantics.tex
+++ b/TypeCheckerGenerator/latex/Semantics.tex
@@ -49,8 +49,8 @@
 \AgdaKeyword{import}\AgdaSpace{}%
 \AgdaModule{Expression}\AgdaSpace{}%
 \AgdaKeyword{using}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{Expr}\AgdaSymbol{;}\AgdaSpace{}%
-\AgdaFunction{toTerm}\AgdaSymbol{)}\<%
+\AgdaSymbol{(}\AgdaFunction{toTerm}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaDatatype{Con}\AgdaSymbol{)}\<%
 \\
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaKeyword{import}\AgdaSpace{}%
@@ -126,45 +126,23 @@ a β-rule.
 \>[2]\AgdaKeyword{field}\<%
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]%
-\>[4]\AgdaField{target}%
-\>[16]\AgdaSymbol{:}%
-\>[19]\AgdaDatatype{Pattern}\AgdaSpace{}%
+\>[4]\AgdaField{target}\AgdaSpace{}%
+\AgdaField{targetType}\AgdaSpace{}%
+\AgdaField{eliminator}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaDatatype{Pattern}\AgdaSpace{}%
 \AgdaNumber{0}\<%
 \\
 %
-\>[4]\AgdaField{targetType}%
-\>[16]\AgdaSymbol{:}%
-\>[19]\AgdaDatatype{Pattern}\AgdaSpace{}%
-\AgdaNumber{0}\<%
-\\
-%
-\>[4]\AgdaField{eliminator}%
-\>[16]\AgdaSymbol{:}%
-\>[19]\AgdaDatatype{Pattern}\AgdaSpace{}%
-\AgdaNumber{0}\<%
-\\
-%
-\>[4]\AgdaField{redTerm}%
-\>[16]\AgdaSymbol{:}%
-\>[19]\AgdaFunction{Expr}\AgdaSpace{}%
+\>[4]\AgdaField{redTerm}\AgdaSpace{}%
+\AgdaField{redType}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaDatatype{Con}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{target}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSpace{}%
 \AgdaField{targetType}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSpace{}%
 \AgdaField{eliminator}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaInductiveConstructor{const}\AgdaSpace{}%
-\AgdaNumber{0}\<%
-\\
-%
-\>[4]\AgdaField{redType}%
-\>[16]\AgdaSymbol{:}%
-\>[19]\AgdaFunction{Expr}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaField{target}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSpace{}%
-\AgdaField{targetType}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSpace{}%
-\AgdaField{eliminator}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaInductiveConstructor{const}\AgdaSpace{}%
 \AgdaNumber{0}\<%
 \\
 %
@@ -190,12 +168,12 @@ a β-rule.
 \>[2]\AgdaFunction{Rule-Env}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{γ}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{=}%
-\>[92I]\AgdaSymbol{((}\AgdaBound{γ}\AgdaSpace{}%
+\>[89I]\AgdaSymbol{((}\AgdaBound{γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⊗}}\AgdaSpace{}%
 \AgdaField{target}\AgdaSymbol{)}%
 \>[36]\AgdaOperator{\AgdaInductiveConstructor{∙}}\<%
 \\
-\>[92I][@{}l@{\AgdaIndent{0}}]%
+\>[89I][@{}l@{\AgdaIndent{0}}]%
 \>[18]\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⊗}}\AgdaSpace{}%
 \AgdaField{targetType}\AgdaSymbol{)}%
@@ -216,8 +194,7 @@ a β-rule.
 \AgdaBound{type}\AgdaSpace{}%
 \AgdaBound{elim}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
-\AgdaFunction{Term}\AgdaSpace{}%
-\AgdaInductiveConstructor{const}\AgdaSpace{}%
+\AgdaDatatype{Const}\AgdaSpace{}%
 \AgdaGeneralizable{γ}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaDatatype{Maybe}\AgdaSpace{}%
@@ -229,9 +206,9 @@ a β-rule.
 \AgdaBound{ty}\AgdaSpace{}%
 \AgdaBound{el}\AgdaSpace{}%
 \AgdaSymbol{=}%
-\>[115I]\AgdaKeyword{do}\<%
+\>[111I]\AgdaKeyword{do}\<%
 \\
-\>[115I][@{}l@{\AgdaIndent{0}}]%
+\>[111I][@{}l@{\AgdaIndent{0}}]%
 \>[24]\AgdaBound{t-env}%
 \>[31]\AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
 \AgdaFunction{match}\AgdaSpace{}%
@@ -270,8 +247,7 @@ a β-rule.
 \>[15]\AgdaFunction{Rule-Env}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaGeneralizable{γ}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaFunction{Term}\AgdaSpace{}%
-\AgdaInductiveConstructor{compu}\AgdaSpace{}%
+\AgdaDatatype{Compu}\AgdaSpace{}%
 \AgdaGeneralizable{γ}\<%
 \\
 %
@@ -305,19 +281,18 @@ to a list of β-rules by trying to match and apply a rule.
 \begin{code}%
 \>[0]\AgdaFunction{findRule}\AgdaSpace{}%
 \AgdaSymbol{:}%
-\>[150I]\AgdaDatatype{List}\AgdaSpace{}%
+\>[145I]\AgdaDatatype{List}\AgdaSpace{}%
 \AgdaRecord{β-rule}\AgdaSpace{}%
 \AgdaSymbol{→}\<%
 \\
-\>[.][@{}l@{}]\<[150I]%
+\>[.][@{}l@{}]\<[145I]%
 \>[11]\AgdaSymbol{(}\AgdaBound{tar}\AgdaSpace{}%
 \AgdaBound{type}\AgdaSpace{}%
 \AgdaBound{elim}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
-\AgdaFunction{Term}\AgdaSpace{}%
-\AgdaInductiveConstructor{const}\AgdaSpace{}%
+\AgdaDatatype{Const}\AgdaSpace{}%
 \AgdaGeneralizable{γ}\AgdaSymbol{)}%
-\>[43]\AgdaSymbol{→}\<%
+\>[38]\AgdaSymbol{→}\<%
 \\
 %
 \>[11]\AgdaDatatype{Failable}\AgdaSpace{}%
@@ -339,10 +314,10 @@ to a list of β-rules by trying to match and apply a rule.
 \AgdaBound{e}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{fail}%
-\>[175I]\AgdaSymbol{(}\AgdaString{"No matching β-rule found for "}\AgdaSpace{}%
+\>[169I]\AgdaSymbol{(}\AgdaString{"No matching β-rule found for "}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{++}}\<%
 \\
-\>[175I][@{}l@{\AgdaIndent{0}}]%
+\>[169I][@{}l@{\AgdaIndent{0}}]%
 \>[27]\AgdaFunction{print}\AgdaSpace{}%
 \AgdaBound{t}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{++}}\AgdaSpace{}%
@@ -396,24 +371,22 @@ to a list of β-rules by trying to match and apply a rule.
 \\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaFunction{reduce}\AgdaSpace{}%
 \AgdaSymbol{:}%
-\>[214I]\AgdaDatatype{List}\AgdaSpace{}%
+\>[208I]\AgdaDatatype{List}\AgdaSpace{}%
 \AgdaRecord{β-rule}%
 \>[34]\AgdaSymbol{→}\<%
 \\
-\>[.][@{}l@{}]\<[214I]%
+\>[.][@{}l@{}]\<[208I]%
 \>[9]\AgdaSymbol{(}\AgdaBound{tar}\AgdaSpace{}%
 \AgdaBound{type}\AgdaSpace{}%
 \AgdaBound{elim}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
-\AgdaFunction{Term}\AgdaSpace{}%
-\AgdaInductiveConstructor{const}\AgdaSpace{}%
+\AgdaDatatype{Const}\AgdaSpace{}%
 \AgdaGeneralizable{γ}\AgdaSymbol{)}%
-\>[41]\AgdaSymbol{→}\<%
+\>[36]\AgdaSymbol{→}\<%
 \\
 %
 \>[9]\AgdaDatatype{Failable}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{Term}\AgdaSpace{}%
-\AgdaInductiveConstructor{compu}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaDatatype{Compu}\AgdaSpace{}%
 \AgdaGeneralizable{γ}\AgdaSymbol{)}\<%
 \\
 \>[0]\AgdaFunction{reduce}\AgdaSpace{}%
@@ -424,9 +397,9 @@ to a list of β-rules by trying to match and apply a rule.
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaSymbol{=}%
-\>[229I]\AgdaKeyword{do}\<%
+\>[221I]\AgdaKeyword{do}\<%
 \\
-\>[229I][@{}l@{\AgdaIndent{0}}]%
+\>[221I][@{}l@{\AgdaIndent{0}}]%
 \>[6]\AgdaSymbol{(}\AgdaBound{rule}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaBound{env}\AgdaSymbol{)}\AgdaSpace{}%
@@ -483,24 +456,22 @@ computation in which they have no right.
 \begin{code}%
 \>[0]\AgdaFunction{normalize}\AgdaSpace{}%
 \AgdaSymbol{:}%
-\>[244I]\AgdaDatatype{List}\AgdaSpace{}%
+\>[236I]\AgdaDatatype{List}\AgdaSpace{}%
 \AgdaRecord{β-rule}\AgdaSpace{}%
 \AgdaSymbol{→}\<%
 \\
-\>[.][@{}l@{}]\<[244I]%
+\>[.][@{}l@{}]\<[236I]%
 \>[12]\AgdaSymbol{(∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{δ}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaFunction{Context}\AgdaSpace{}%
 \AgdaBound{δ}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaFunction{Term}\AgdaSpace{}%
-\AgdaInductiveConstructor{compu}\AgdaSpace{}%
+\AgdaDatatype{Compu}\AgdaSpace{}%
 \AgdaBound{δ}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaDatatype{Failable}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{Term}\AgdaSpace{}%
-\AgdaInductiveConstructor{const}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaDatatype{Const}\AgdaSpace{}%
 \AgdaBound{δ}\AgdaSymbol{))}\AgdaSpace{}%
 \AgdaSymbol{→}\<%
 \\
@@ -516,8 +487,7 @@ computation in which they have no right.
 \>[22]\AgdaSymbol{→}\<%
 \\
 %
-\>[12]\AgdaFunction{Term}\AgdaSpace{}%
-\AgdaInductiveConstructor{const}\AgdaSpace{}%
+\>[12]\AgdaDatatype{Const}\AgdaSpace{}%
 \AgdaGeneralizable{γ}\<%
 \\
 \>[0]\AgdaFunction{normalize}\AgdaSpace{}%
@@ -529,8 +499,6 @@ computation in which they have no right.
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaKeyword{where}\<%
 \\
-%
-\\[\AgdaEmptyExtraSkip]%
 \>[2][@{}l@{\AgdaIndent{0}}]%
 \>[4]\AgdaFunction{norm}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -541,8 +509,7 @@ computation in which they have no right.
 \AgdaGeneralizable{d}\AgdaSpace{}%
 \AgdaGeneralizable{γ}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaFunction{Term}\AgdaSpace{}%
-\AgdaInductiveConstructor{const}\AgdaSpace{}%
+\AgdaDatatype{Const}\AgdaSpace{}%
 \AgdaGeneralizable{γ}\<%
 \\
 %
