Introduce eta-rules

--- a/TypeCheckerGenerator/latex/Thinning.tex
+++ b/TypeCheckerGenerator/latex/Thinning.tex
@@ -1099,13 +1099,11 @@ implementations are often trivial.
 \\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}\textasciicircum{}term}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{d}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaBound{t}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaFunction{weaken}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaFunction{Term}\AgdaSpace{}%
 \AgdaBound{d}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⟨term\AgdaUnderscore{}}}\AgdaSpace{}%
-\AgdaBound{t}\<%
+\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⟨term\AgdaUnderscore{}}}\<%
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
@@ -1117,11 +1115,9 @@ implementations are often trivial.
 \\
 \>[0]\AgdaFunction{\textasciicircum{}sub}\AgdaSpace{}%
 \AgdaBound{⟨T}\AgdaSpace{}%
-\AgdaBound{σ}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaFunction{map}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{weaken}\AgdaSpace{}%
-\AgdaBound{⟨T}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaBound{σ}\<%
+\AgdaBound{⟨T}\AgdaSymbol{)}\<%
 \end{code}
 }
